--- a/cam_tracker/CMakeLists.txt
+++ b/cam_tracker/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
-project(capture)
+project(cam_tracker)
 find_package(OpenCV REQUIRED)
-add_executable(capture main.cpp)
+add_executable(capture capture.cpp)
+add_executable(manipulate manipulate.cpp)
 target_link_libraries(capture ${OpenCV_LIBS})
+target_link_libraries(manipulate ${OpenCV_LIBS})
 
