--- a/cam_tracker/CMakeLists.txt
+++ b/cam_tracker/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 2.8)
 project(cam_tracker)
 find_package(OpenCV REQUIRED)
+add_executable(calibrate calibrate.cpp)
 add_executable(capture capture.cpp)
 add_executable(manipulate manipulate.cpp)
+add_executable(centroid centroid.cpp)
+target_link_libraries(calibrate ${OpenCV_LIBS})
 target_link_libraries(capture ${OpenCV_LIBS})
 target_link_libraries(manipulate ${OpenCV_LIBS})
+target_link_libraries(centroid ${OpenCV_LIBS})
 
