Read the timestamps from images created by the IP Webcam Pro app on my Android phone.

--- a/cam_tracker/CMakeLists.txt
+++ b/cam_tracker/CMakeLists.txt
@@ -6,8 +6,10 @@ add_executable(calibrate calibrate.cpp)
 add_executable(capture capture.cpp)
 add_executable(manipulate manipulate.cpp)
 add_executable(centroid centroid.cpp)
+add_executable(find_digits find_digits.cpp)
 target_link_libraries(calibrate ${OpenCV_LIBS})
 target_link_libraries(capture ${OpenCV_LIBS})
 target_link_libraries(manipulate ${OpenCV_LIBS})
 target_link_libraries(centroid ${OpenCV_LIBS})
+target_link_libraries(find_digits ${OpenCV_LIBS})
 
