Restrict the search for keypoints to an area where the car is expected to be found.

--- a/cam_tracker/CMakeLists.txt
+++ b/cam_tracker/CMakeLists.txt
@@ -4,10 +4,11 @@ set(CMAKE_BUILD_TYPE Debug)
 find_package(OpenCV REQUIRED)
 add_definitions(-D__STDC_CONSTANT_MACROS)
 add_executable(calibrate_color_filter
-    util.h util.cpp
-    calibrate_color_filter.cpp)
+    calibrate_color_filter.cpp
+    util.h util.cpp)
 add_executable(track_car
-    track_car.cpp)
+    track_car.cpp
+    util.h util.cpp)
 target_link_libraries(calibrate_color_filter
     ${OpenCV_LIBS}
     -lavformat)
