--- a/cam_tracker/CMakeLists.txt
+++ b/cam_tracker/CMakeLists.txt
@@ -3,15 +3,23 @@ project(cam_tracker)
 set(CMAKE_BUILD_TYPE Debug)
 find_package(OpenCV REQUIRED)
 add_definitions(-D__STDC_CONSTANT_MACROS)
+
 add_executable(calibrate_color_filter
     calibrate_color_filter.cpp
-    util.h util.cpp)
-add_executable(track_car
-    track_car.cpp
     util.h util.cpp)
 target_link_libraries(calibrate_color_filter
     ${OpenCV_LIBS}
     -lavformat)
-target_link_libraries(track_car
+
+add_executable(track_car2
+    track_car2.cpp
+    util.h util.cpp)
+target_link_libraries(track_car2
     ${OpenCV_LIBS})
+
+#add_executable(track_car
+#    track_car.cpp
+#    util.h util.cpp)
+#target_link_libraries(track_car
+#    ${OpenCV_LIBS})
 
