Begin the implementation of the aav_gps_driver node.

--- a/aav_car_ws/src/aav_gps_driver/CMakeLists.txt
+++ b/aav_car_ws/src/aav_gps_driver/CMakeLists.txt
@@ -7,6 +7,7 @@ project(aav_gps_driver)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   std_msgs
+  sensor_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -93,25 +94,15 @@ catkin_package(
 ## Your package locations should be listed before other locations
 # include_directories(include)
 include_directories(
+  include
   ${catkin_INCLUDE_DIRS}
 )
 
-## Declare a cpp library
-# add_library(aav_gps_driver
-#   src/${PROJECT_NAME}/aav_gps_driver.cpp
-# )
+add_executable(aav_gps_driver_node src/aav_gps_driver_node.cpp)
+target_link_libraries(aav_gps_driver_node
+   ${catkin_LIBRARIES}
+)
 
-## Declare a cpp executable
-# add_executable(aav_gps_driver_node src/aav_gps_driver_node.cpp)
-
-## Add cmake target dependencies of the executable/library
-## as an example, message headers may need to be generated before nodes
-# add_dependencies(aav_gps_driver_node aav_gps_driver_generate_messages_cpp)
-
-## Specify libraries to link a library or executable target against
-# target_link_libraries(aav_gps_driver_node
-#   ${catkin_LIBRARIES}
-# )
 
 #############
 ## Install ##
