--- a/aav_car_ws/src/aav_gps_driver/CMakeLists.txt
+++ b/aav_car_ws/src/aav_gps_driver/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(aav_gps_driver)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
@@ -98,9 +100,12 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
-add_executable(aav_gps_driver_node src/aav_gps_driver_node.cpp)
+add_executable(aav_gps_driver_node
+  src/aav_gps_driver_node.cpp
+  src/GpsDriver.cpp
+)
 target_link_libraries(aav_gps_driver_node
-   ${catkin_LIBRARIES}
+  ${catkin_LIBRARIES}
 )
 
 
