--- a/aav_car_ws/src/aav_viz/package.xml
+++ b/aav_car_ws/src/aav_viz/package.xml
@@ -6,16 +6,17 @@
 
   <maintainer email="samuel.j.bishop@gmail.com">Sam Bishop</maintainer>
 
-  <license>BSD</license>
+  <license>Apache 2.0</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>roslaunch</build_depend>
 
-  <run_depend>aav_simple_description</run_depend>
+  <run_depend>aav_description</run_depend>
   <run_depend>joint_state_publisher</run_depend>
   <run_depend>rviz</run_depend>
 
   <export>
+    <architecture_independent/>
   </export>
 </package>
