--- a/aav_car_ws/src/aav_description/package.xml
+++ b/aav_car_ws/src/aav_description/package.xml
@@ -9,8 +9,13 @@
   <license>Apache 2.0</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+
   <build_depend>roslaunch</build_depend>
+
+  <run_depend>ackermann_msgs</run_depend>
+  <run_depend>controller_manager</run_depend>
   <run_depend>robot_state_publisher</run_depend>
+  <run_depend>rospy</run_depend>
   <run_depend>xacro</run_depend>
 
   <export>
