--- a/aav_car_ws/src/aav_description/package.xml
+++ b/aav_car_ws/src/aav_description/package.xml
@@ -14,6 +14,7 @@
 
   <run_depend>ackermann_msgs</run_depend>
   <run_depend>controller_manager</run_depend>
+  <run_depend>hector_gazebo_plugins</run_depend>
   <run_depend>robot_state_publisher</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>xacro</run_depend>
