--- a/aav_car_ws/src/aav_control/package.xml
+++ b/aav_car_ws/src/aav_control/package.xml
@@ -10,11 +10,24 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>aav_msgs</build_depend>
+  <build_depend>ackermann_msgs</build_depend>
+  <build_depend>actionlib</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
+  <build_depend>nav_msgs</build_depend>
+  <build_depend>roscpp</build_depend>
   <build_depend>roslaunch</build_depend>
 
+  <run_depend>aav_msgs</run_depend>
+  <run_depend>ackermann_msgs</run_depend>
+  <run_depend>actionlib</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
+  <run_depend>message_runtime</run_depend>
+  <run_depend>nav_msgs</run_depend>
   <run_depend>robot_localization</run_depend>
+  <run_depend>roscpp</run_depend>
 
   <export>
-    <architecture_independent/>
   </export>
 </package>
