--- a/aav_car_ws/src/aav_msgs/CMakeLists.txt
+++ b/aav_car_ws/src/aav_msgs/CMakeLists.txt
@@ -1,14 +1,30 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(aav_msgs)
 
-find_package(catkin REQUIRED COMPONENTS message_generation std_msgs)
-
-add_message_files(
-  DIRECTORY msg
-  FILES QuinticPath.msg QuinticSegment.msg PlanningPoint.msg
+find_package(
+  catkin REQUIRED
+    message_generation
+    roscpp
+    std_msgs
 )
 
-generate_messages(DEPENDENCIES std_msgs)
+add_message_files(
+  DIRECTORY
+    msg
+  FILES
+    QuinticPath.msg
+    QuinticSegment.msg
+    PlanningPoint.msg
+)
 
-catkin_package(CATKIN_DEPENDS message_runtime std_msgs)
+generate_messages(
+  DEPENDENCIES
+    std_msgs
+)
+
+catkin_package(
+  CATKIN_DEPENDS
+    message_runtime
+    std_msgs
+)
 
