I forgot to include both the x and y splines.

--- a/aav_car_ws/src/aav_msgs/CMakeLists.txt
+++ b/aav_car_ws/src/aav_msgs/CMakeLists.txt
@@ -12,9 +12,10 @@ add_message_files(
   DIRECTORY
     msg
   FILES
-    QuinticPath.msg
-    QuinticSegment.msg
     PlanningPoint.msg
+    QuinticPath.msg
+    QuinticPathSegment.msg
+    QuinticSplineSegment.msg
 )
 
 generate_messages(
