--- a/aav_car_ws/src/aav_control/goal.yaml
+++ b/aav_car_ws/src/aav_control/goal.yaml
@@ -1,15 +1,27 @@
-path:
-  segments: [
-    {
-      arc_length: 1
-      points: [
-      ]
-      P0:
-      P1:
-      P2:
-      P3:
-      P4:
-      P5:
+{
+  arc_length: 0,
+  points: [ {
+      x: 0,
+      y: 0,
+      speed: 0,
+      acceleration: 0
     }
-  ]
+  ],
+  x_segment: {
+    P0: 0,
+    P1: 0,
+    P2: 0,
+    P3: 0,
+    P4: 0,
+    P5: 0
+  },
+  y_segment: {
+    P0: 0,
+    P1: 0,
+    P2: 0,
+    P3: 0,
+    P4: 0,
+    P5: 0
+  }
+}
 
