--- a/aav_car_ws/src/aav_control/goal_template.yaml
+++ b/aav_car_ws/src/aav_control/goal_template.yaml
@@ -1,27 +1,31 @@
-{
-  arc_length: 0,
-  points: [ {
-      x: 0,
-      y: 0,
-      speed: 0,
-      acceleration: 0
-    }
-  ],
-  x_segment: {
-    P0: 0,
-    P1: 0,
-    P2: 0,
-    P3: 0,
-    P4: 0,
-    P5: 0
-  },
-  y_segment: {
-    P0: 0,
-    P1: 0,
-    P2: 0,
-    P3: 0,
-    P4: 0,
-    P5: 0
+goal: {
+  path: {
+    segments: [ {
+        points: [ {
+            x: 0,
+            y: 0,
+            speed: 0,
+            acceleration: 0
+          }
+        ],
+        x_segment: {
+          P0: 0,
+          P1: 0,
+          P2: 0,
+          P3: 0,
+          P4: 0,
+          P5: 0
+        },
+        y_segment: {
+          P0: 0,
+          P1: 0,
+          P2: 0,
+          P3: 0,
+          P4: 0,
+          P5: 0
+        }
+      }
+    ]
   }
 }
 
