Start adding the GSL "where are we at along the spline?" code.

--- a/aav_car_ws/src/aav_control/CMakeLists.txt
+++ b/aav_car_ws/src/aav_control/CMakeLists.txt
@@ -7,10 +7,15 @@ find_package(
     ackermann_msgs
     actionlib
     actionlib_msgs
+    cmake_modules
     genmsg
     nav_msgs
     roscpp
     roslaunch
+)
+
+find_package(
+  GSL REQUIRED
 )
 
 add_action_files(
@@ -48,6 +53,7 @@ include_directories(
 target_link_libraries(
   aav_control
   ${catkin_LIBRARIES}
+  ${GSL_LIBRARIES}
 )
 
 roslaunch_add_file_check(launch)
