--- a/aav_car_ws/src/aav_control/CMakeLists.txt
+++ b/aav_car_ws/src/aav_control/CMakeLists.txt
@@ -39,6 +39,8 @@ catkin_package(
     roscpp
 )
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+
 add_executable(
   aav_control
     src/DistanceCalculator.cpp
