I'm trying to get the build to work after a clean.  This is better, but it still takes two passes.

--- a/aav_car_ws/src/aav_msgs/CMakeLists.txt
+++ b/aav_car_ws/src/aav_msgs/CMakeLists.txt
@@ -3,6 +3,8 @@ project(aav_msgs)
 
 find_package(
   catkin REQUIRED
+    actionlib_msgs
+    genmsg
     message_generation
     roscpp
     std_msgs
@@ -18,13 +20,23 @@ add_message_files(
     QuinticSplineSegment.msg
 )
 
+add_action_files(
+  DIRECTORY
+    action
+  FILES
+    DoQuinticPath.action
+)
+
 generate_messages(
   DEPENDENCIES
+    aav_msgs
+    actionlib_msgs
     std_msgs
 )
 
 catkin_package(
   CATKIN_DEPENDS
+    actionlib_msgs
     message_runtime
     std_msgs
 )
