Declare the aav_control dependency on aav_msgs, so that builds work after only one attempt.

--- a/aav_car_ws/src/aav_control/CMakeLists.txt
+++ b/aav_car_ws/src/aav_control/CMakeLists.txt
@@ -32,6 +32,11 @@ add_executable(
     src/main.cpp
 )
 
+add_dependencies(
+  aav_control
+    ${aav_msgs_EXPORTED_TARGETS}
+)
+
 include_directories(
   include
   ${catkin_INCLUDE_DIRS}
