--- a/aav_car_ws/src/aav_control/CMakeLists.txt
+++ b/aav_car_ws/src/aav_control/CMakeLists.txt
@@ -28,8 +28,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 add_executable(
   aav_control
     src/DistanceCalculator.cpp
-    src/QuinticControl.cpp
     src/main.cpp
+    src/Pid.cpp
+    src/QuinticControl.cpp
 )
 
 add_dependencies(
