Begin a restructuring of the spline/distance calculation code.

--- a/aav_car_ws/src/aav_control/CMakeLists.txt
+++ b/aav_car_ws/src/aav_control/CMakeLists.txt
@@ -31,6 +31,10 @@ add_executable(
     src/main.cpp
     src/Pid.cpp
     src/QuinticControl.cpp
+
+    src/PathCalculator.cpp
+    src/PathSegmentCalculator.cpp
+    src/SplineSegmentCalculator.cpp
 )
 
 add_dependencies(
