Save before renaming files.

--- a/aav_car_ws/src/aav_control/CMakeLists.txt
+++ b/aav_car_ws/src/aav_control/CMakeLists.txt
@@ -32,7 +32,9 @@ add_executable(
     src/Pid.cpp
     src/QuinticControl.cpp
 
+    src/CrossTrackErrorCalculator.cpp
     src/PathCalculator.cpp
+    src/PathPoint.cpp
     src/PathSegmentCalculator.cpp
     src/SplineSegmentCalculator.cpp
 )
