rename: CrossTrackErrorCalculator -> CteCalculator

--- a/aav_car_ws/src/aav_control/CMakeLists.txt
+++ b/aav_car_ws/src/aav_control/CMakeLists.txt
@@ -32,7 +32,7 @@ add_executable(
     src/Pid.cpp
     src/QuinticControl.cpp
 
-    src/cross_track_error_calculator.cpp
+    src/cte_calculator.cpp
     src/path_calculator.cpp
     src/path_point.cpp
     src/path_segment_calculator.cpp
