Move the Pid class to the ROS style.

--- a/aav_car_ws/src/aav_control/CMakeLists.txt
+++ b/aav_car_ws/src/aav_control/CMakeLists.txt
@@ -36,6 +36,7 @@ add_executable(
     src/path_calculator.cpp
     src/path_point.cpp
     src/path_segment_calculator.cpp
+    src/pid.cpp
     src/spline_segment_calculator.cpp
 )
 
