Port QuinticControl to the ROS style.  Start adding logic to CteCalculator.

--- a/aav_car_ws/src/aav_control/CMakeLists.txt
+++ b/aav_car_ws/src/aav_control/CMakeLists.txt
@@ -33,10 +33,8 @@ add_executable(
     src/QuinticControl.cpp
 
     src/cte_calculator.cpp
-    src/path_calculator.cpp
-    src/path_point.cpp
     src/path_segment_calculator.cpp
-    src/pid.cpp
+    #src/pid.cpp
     src/spline_segment_calculator.cpp
 )
 
