Reorganize the launch files to support all of the different run configurations.

--- a/aav_car_ws/src/aav_teleop/CMakeLists.txt
+++ b/aav_car_ws/src/aav_teleop/CMakeLists.txt
@@ -1,19 +1,21 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(aav_description)
+project(aav_teleop)
 
 find_package(
   catkin REQUIRED
     roslaunch
 )
 
-catkin_package()
+catkin_package(
+  CATKIN_DEPENDS
+    ackermann_msgs
+)
 
 roslaunch_add_file_check(launch)
 
 install(
   DIRECTORY
     launch
-    urdf
   DESTINATION
     ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
