--- a/aav_car_ws/src/aav_description/package.xml
+++ b/aav_car_ws/src/aav_description/package.xml
@@ -12,11 +12,8 @@
 
   <build_depend>roslaunch</build_depend>
 
-  <run_depend>ackermann_msgs</run_depend>
-  <run_depend>controller_manager</run_depend>
-  <run_depend>hector_gazebo_plugins</run_depend>
   <run_depend>robot_state_publisher</run_depend>
-  <run_depend>rospy</run_depend>
+  <run_depend>tf</run_depend>
   <run_depend>xacro</run_depend>
 
   <export>
