--- a/aav_car_ws/src/aav_gazebo/package.xml
+++ b/aav_car_ws/src/aav_gazebo/package.xml
@@ -17,10 +17,9 @@
   <run_depend>controller_manager</run_depend>
   <run_depend>gazebo_ros</run_depend>
   <run_depend>gazebo_ros_control</run_depend>
-  <run_depend>rospy</run_depend>
+  <run_depend>hector_gazebo_plugins</run_depend>
   <run_depend>joint_state_publisher</run_depend>
-  <run_depend>tf</run_depend>
-  <run_depend>xacro</run_depend>
+  <run_depend>rospy</run_depend>
 
   <export>
     <architecture_independent/>
