--- a/aav_car_ws/src/aav_rviz/CMakeLists.txt
+++ b/aav_car_ws/src/aav_rviz/CMakeLists.txt
@@ -1,14 +1,19 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(aav_rviz)
 
-find_package(catkin REQUIRED COMPONENTS roslaunch)
+find_package(
+  catkin REQUIRED
+    roslaunch
+)
 
 catkin_package()
 
 roslaunch_add_file_check(launch)
 
 install(
-  DIRECTORY launch rviz
+  DIRECTORY
+    launch
+    rviz
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
