--- a/aav_car_ws/src/aav_control/CMakeLists.txt
+++ b/aav_car_ws/src/aav_control/CMakeLists.txt
@@ -35,7 +35,7 @@ add_executable(
 
 add_dependencies(
   ${PROJECT_NAME}
-    ${aav_msgs_EXPORTED_TARGETS}
+    ${catkin_EXPORTED_TARGETS}
 )
 
 include_directories(
