--- a/aav_car_ws/src/aav_control/package.xml
+++ b/aav_car_ws/src/aav_control/package.xml
@@ -11,6 +11,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>aav_msgs</build_depend>
+  <build_depend>aav_quintic</build_depend>
   <build_depend>ackermann_msgs</build_depend>
   <build_depend>actionlib</build_depend>
   <build_depend>cmake_modules</build_depend>
@@ -19,6 +20,7 @@
   <build_depend>roslaunch</build_depend>
 
   <run_depend>aav_msgs</run_depend>
+  <run_depend>aav_quintic</run_depend>
   <run_depend>ackermann_msgs</run_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>message_runtime</run_depend>
