--- a/aav_car_ws/src/aav_quintic/CMakeLists.txt
+++ b/aav_car_ws/src/aav_quintic/CMakeLists.txt
@@ -20,6 +20,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 
 add_library(
   ${PROJECT_NAME}
+    src/path_calculator.cpp
     src/path_segment_calculator.cpp
     src/spline_segment_calculator.cpp
 )
