--- a/aav_car_ws/src/aav_control/config/steering_pid.yaml
+++ b/aav_car_ws/src/aav_control/config/steering_pid.yaml
@@ -1,7 +1,7 @@
 steering_pid:
-  p_gain: .75
-  i_gain: 0
+  p_gain: 0.75
+  i_gain: 0.0
   d_gain: -0.2
-  i_min: -4
-  i_max: 4
+  i_min: -4.0
+  i_max: 4.0
 
