--- a/desktop_ws/src/aav_control/CMakeLists.txt
+++ b/desktop_ws/src/aav_control/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(
     ackermann_msgs
     actionlib
     cmake_modules
+    gazebo_msgs
     nav_msgs
     roscpp
     roslaunch
@@ -22,6 +23,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 add_executable(
   ${PROJECT_NAME}
     src/cte_calculator.cpp
+    src/gazebo_state_forwarder.cpp
     src/main.cpp
     src/pid.cpp
     src/quintic_control.cpp
