--- a/desktop_ws/src/aav_control/package.xml
+++ b/desktop_ws/src/aav_control/package.xml
@@ -15,6 +15,7 @@
   <build_depend>ackermann_msgs</build_depend>
   <build_depend>actionlib</build_depend>
   <build_depend>cmake_modules</build_depend>
+  <build_depend>gazebo_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>roslaunch</build_depend>
@@ -23,6 +24,7 @@
   <run_depend>aav_quintic</run_depend>
   <run_depend>ackermann_msgs</run_depend>
   <run_depend>actionlib</run_depend>
+  <run_depend>gazebo_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>roscpp</run_depend>
